removed scrollbar on logIn and fixed big card responsive

--- a/css/board.css
+++ b/css/board.css
@@ -308,6 +308,7 @@ h3 {
 	flex-direction: column;
 	gap: 24px;
 	font-size: 20px;
+	height: 100vh;
 	max-height: 850px;
 	overflow-y: scroll;
 }
